# AI-Career-Recommendation-System

./: .gitignore  app.db  career_recommendation.db  careers.csv  courses.csv  main.py  model.pkl  pyproject.toml  requirements.txt
Backend/app/api/routes/: auth.py
Backend/data/: careers_dataset.csv
Backend/database/: add_data.py  migrate.py  models.py  seed_data.py
cache/: career_embeddings.npy  career_titles.pkl
