[project]
name = "team4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "mysqlclient>=2.2.7",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
]
